<resources>
    <string name="app_name">드림어필</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="str_title_notification">알림</string>
    <string name="str_name_value_style">님이</string>
    <string name="str_is_update_1">을 업데이트 했습니다</string>
    <string name="str_is_update_2">를 업데이트 했습니다</string>
    <string name="str_did_complete">를 달성했습니다</string>
    <string name="str_go_view">보러가기 >></string>
    <string name="str_dream_profile">드림프로필</string>
    <string name="str_error_server">서버에 에러가 발생하였습니다</string>
    <string name="str_expired_user_data">회원 정보가 만료되었습니다</string>
    <string name="str_no_data">데이터가 없습니다</string>
    <string name="str_not_ready_yet">준비중입니다</string>
    <string name="str_menu_normal_profile">일반프로필</string>
    <string name="str_menu_following">팔로잉</string>
    <string name="str_cheering_member">응원해준 어필러</string>
    <string name="str_menu_dreampoint">드림포인트</string>
    <string name="str_title_dream_title">꿈에 명칭 달아주기</string>
    <string name="str_title_dream_list">꿈 보관함</string>
    <string name="str_dream_present">꿈 소개</string>
    <string name="str_performance">대표성과</string>
    <string name="str_blueprint">발전계획</string>
    <string name="str_logout">로그아웃</string>
    <string name="str_content_description">이미지가 존재하지 않습니다</string>
    <string name="str_confirm">확인</string>
    <string name="str_next">다음</string>
    <string name="str_setting_permissions">권한 설정</string>
    <string name="str_setting">설정</string>
    <string name="str_permission_info">2017년 3월 23일부터 시행되는 정보통신망법령에 맞추어 서비스이용에 꼭 필요한 항목만 필수 접근하고 있습니다.</string>
    <string name="str_essential_access">필수적 접근 권한</string>
    <string name="str_storage_permission_info">게시물 생성시 파일첨부를 위해\n저장소 권한이 필요합니다.</string>
    <string name="str_camera_permission_info">게시물 생성시 촬영사진을 첨부할 수 있도록\n 카메라 권한이 필요합니다.</string>
    <string name="str_warning_access_method">권한을 설정하지 않으면 서비스 이용에 어려움이 있을 수 있습니다.</string>
    <string name="str_access_method">접근권한 변경 방법\n휴대폰 설정 > 애플리케이션 관리 > 드림어필</string>
    <string name="str_agree_and_start">동의 및 시작</string>
    <string name="str_follower">팔로워</string>
    <string name="str_achievement_post">성과</string>
    <string name="str_action_post">실천</string>
    <string name="str_add_follow">+팔로우</string>
    <string name="str_following">팔로잉</string>
    <string name="str_default_dream_title">내 꿈에 특색있는 명칭 달기</string>
    <string name="str_default_dream_description">핵심문장으로 꿈 설명하기</string>
    <string name="str_default_merit_and_motive">꿈의 매력과 계기 표현하기</string>
    <string name="str_default_merit">꿈의 매력과</string>
    <string name="str_default_motive">계기 표현하기</string>
    <string name="str_default_ability_and_opportunity">꿈에 필요한 능력과 기회 정리하기</string>
    <string name="str_default_object">능력/기회를 위한 실천목표를 등록해주세요</string>
    <string name="str_default_ability">꿈에 필요한 능력과</string>
    <string name="str_default_oppotunity">기회 정리하기</string>
    <string name="str_default_object_step_page">세부단계를 추가해 작은 것부터 실천해보세요\n실천을 인증하면 여기에 표시됩니다</string>
    <string name="str_default_merit_and_motive_2">이 꿈의 어떤 점에 매력을 느꼈을까?\n계기는 무엇이었을까?</string>
    <string name="str_default_addr_search">관심지역으로 설정할 주소를 검색하세요\n\n원하는 주소를 검색하여 선택하면\n관심지역이 자동으로 동 단위로 지정됩니다</string>
    <string name="str_default_addr_search_bold">관심지역으로 설정할 주소를 검색하세요</string>
    <string name="str_designation">명칭</string>
    <string name="str_explanation">설명</string>
    <string name="str_merit">매력</string>
    <string name="str_motive">계기</string>
    <string name="str_dream_title">꿈 명칭</string>
    <string name="str_dream_description">꿈 설명</string>
    <string name="str_dream_merit_and_motive">꿈의 매력과 계기</string>
    <string name="str_merit_and_motive">매력 / 계기</string>
    <string name="str_more_view">더보기</string>
    <string name="str_close_view">접기</string>
    <string name="str_cheering">응원합니다</string>
    <string name="str_add_comment">댓글 달기</string>
    <string name="str_sharing">공유하기</string>
    <string name="str_title_comment_detail">응원과 조언</string>
    <string name="str_first_dream">첫번째 꿈</string>
    <string name="str_second_dream">두번째 꿈</string>
    <string name="str_third_dream">세번째 꿈</string>
    <string name="str_forth_dream">네번째 꿈</string>
    <string name="str_fifth_dream">다섯번째 꿈</string>
    <string name="str_sixth_dream">여섯번째 꿈</string>
    <string name="str_seventh_dream">일곱번째 꿈</string>
    <string name="str_eighth_dream">여덟번째 꿈</string>
    <string name="str_ninth_dream">아홉번째 꿈</string>
    <string name="str_tenth_dream">열번째 꿈</string>
    <string name="str_error">Error</string>
    <string name="lv_00">Lv.00</string>
    <string name="str_recent_performance">최근 성과</string>
    <string name="str_recent_write">최신글</string>
    <string name="str_best_performance">대표 성과</string>
    <string name="str_default_best_performance">대표로 지정한 성과가\n여기에 표시됩니다</string>
    <string name="str_comment_hint">댓글 남기기</string>
    <string name="str_comment">댓글</string>
    <string name="str_input_comment">코멘트 입력..</string>
    <string name="str_input_tag">태그 입력..</string>
    <string name="str_commit">등록</string>
    <string name="str_ability">갖출 능력</string>
    <string name="str_opportunity">만들어갈 기회</string>
    <string name="str_add_opportunity">만들어갈 기회 등록하기</string>
    <string name="str_add_ability">갖출능력 등록하기</string>
    <string name="str_default_add_ability">수식어에 맞게, 직업명에 맞게\n어떤 능력이 필요할까?</string>
    <string name="str_default_add_opportunity">필요한 경험과 실력을 쌓기 위해\n 어떤 기회를 만들어볼까?</string>
    <string name="str_edit_ability">갖출 능력 수정</string>
    <string name="str_edit_opportunity">만들어갈 기회 수정</string>
    <string name="str_add_oject_step">실천목표 등록하기</string>
    <string name="str_default_object_step">갖출 능력과 만들어갈 기회를 위해\n어떤 실천을 해볼까?</string>
    <string name="str_edit_object_step">실천목표 수정</string>
    <string name="str_object_step">실천 진행상황</string>
    <string name="str_add_object_step_detail_title">실천목표에 세부단계 추가하기</string>
    <string name="str_default_object_step_detail">꾸준히 노력하기 쉽도록\n어떤 단계로 나눠서 실천해볼까?</string>
    <string name="str_edit_object_step_detail">세부단계 수정</string>
    <string name="str_add_reply">답글 달기</string>
    <string name="str_object">실천목표</string>
    <string name="str_login">로그인</string>
    <string name="str_register">회원가입</string>
    <string name="str_name">이름</string>
    <string name="str_name_hint">이름입력</string>
    <string name="str_gender">성별</string>
    <string name="str_birthday">생년월일</string>
    <string name="str_year">년도</string>
    <string name="str_year2">년도</string>
    <string name="str_month">월</string>
    <string name="str_date">일</string>
    <string name="str_email">이메일</string>
    <string name="str_number">전화번호</string>
    <string name="str_password">비밀번호</string>
    <string name="str_agree_privacy_policy_register">개인정보처리방침 동의하고 회원가입하기</string>
    <string name="str_male">남</string>
    <string name="str_female">여</string>
    <string name="str_email_hint">이메일(아이디)입력</string>
    <string name="str_password_hint">비밀번호 입력</string>
    <string name="str_check_password">비밀번호 확인</string>
    <string name="str_level_info">Lv. 1 달성 조건 : 꿈 소개 탭 모든 항목 작성\nLv. 2 달성 조건 : 발전계획 탭 모든 항목 작성\n경험치 획득 : 실천 + 10 / 대표성과 + 30 / 일상 · 경험 + 2 / 영감 + 2</string>
    <string name="str_add_achivement_post">대표성과 등록하기</string>
    <string name="str_edit_achivement_post">대표성과 수정하기</string>
    <string name="str_best_post">대표성과</string>
    <string name="str_transfer">편집</string>
    <string name="str_add_dream">새 꿈 추가하기</string>
    <string name="str_dream_title_info">내 꿈에 특색있는 명칭을 달아주세요</string>
    <string name="str_dream_title_info_highlight">특색있는 명칭</string>
    <string name="str_dream_description_info">뭐하는 사람인지 한 문장으로 표현하면?</string>
    <string name="str_dream_description_highlight">한 문장</string>
    <string name="str_dream_description_detail_info">대표적으로 어떤 일을 하는 걸까? (세 가지)</string>
    <string name="str_dream_description_detail_highlight">대표적</string>
    <string name="str_input_text_hint">입력해주세요</string>
    <string name="str_value_style">수식어</string>
    <string name="str_job">직업명</string>
    <string name="str_all_agreement">모두 동의합니다</string>
    <string name="str_agree_terms_of_use">이용약관 동의</string>
    <string name="str_agree_privacy_policy">개인정보처리방침 동의</string>
    <string name="str_terms_of_use">이용약관</string>
    <string name="str_privacy_policy">개인정보처리방침</string>
    <string name="str_receive_marketing">마케팅 정보 수신 동의</string>
    <string name="str_agreement_dtail">상세보기 ></string>
    <string name="str_auth_email">인증 메일</string>
    <string name="str_sent_auth_email">인증 메일이 발송되었습니다.</string>
    <string name="str_resend_email">인증메일 재전송</string>
    <string name="str_success_register">가입완료</string>
    <string name="str_sent_auth_email_info">가입하신 메일 계정으로 인증코드가 전송되었습니다.\n메일 확인 후 인증코드를 하단에 입력하여 가입을 완료해 주세요.</string>
    <string name="str_auth_code_hint">코드입력</string>
    <string name="str_send_auth_code">인증번호 보내기</string>
    <string name="str_send_email_info">회원가입 시 등록한 이메일 주소를 입력해 주세요.</string>
    <string name="str_hint_input_email">이메일 주소 입력</string>
    <string name="str_change_password_info">변경할 비밀번호를 입력해 주세요.</string>
    <string name="str_change_password">비밀번호 변경하기</string>
    <string name="str_password_warning">최소 8자리 이상 : 영어 대문자, 소문자, 숫자, 특수문자 중 3종류 조합</string>
    <string name="str_normal_profile">일반프로필</string>
    <string name="str_normal_prifile_info">기본정보</string>
    <string name="str_normal_edit_prifile">기본정보 수정</string>
    <string name="str_nickname">별명</string>
    <string name="str_age">나이</string>
    <string name="str_address">거주지</string>
    <string name="str_group">소속</string>
    <string name="str_private">비공개</string>
    <string name="str_nickname_hint">별명 입력 (중복불가)</string>
    <string name="str_address_hint">예) 유성구 어은동, 유성구 과학로</string>
    <string name="str_number_hint">전화번호를 입력해 주세요</string>
    <string name="str_reset_password">비밀번호 재설정</string>
    <string name="str_success_mission">미션 달성</string>
    <string name="str_success">완료</string>
    <string name="str_do_success">완료하기</string>
    <string name="str_do_not_success">완료취소하기</string>
    <string name="str_get">획득</string>
    <string name="str_dream_point">드림포인트</string>
    <string name="str_dream_point_title">드림포인트 현황</string>
    <string name="str_dream_note">드림노트</string>
    <string name="str_dream_point_usage">드림포인트 이용내역</string>
    <string name="str_dream_point_info_mission">미션 달성하고</string>
    <string name="str_dream_point_info_get_point">포인트 획득하자</string>
    <string name="str_get_and_usage">획득 및 사용내역 ></string>
    <string name="str_add_coupon">쿠폰 등록</string>
    <string name="str_add_old_coupon">예전 쿠폰 등록</string>
    <string name="str_daily">일간</string>
    <string name="str_weekly">주간</string>
    <string name="str_monthly">월간</string>
    <string name="str_yearly">년간</string>
    <string name="str_forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="str_group_name">소속명</string>
    <string name="str_hint_group_name">소속을 입력해 주세요</string>
    <string name="str_group_rank">직책</string>
    <string name="str_hint_group_rank">직책을 입력해 주세요</string>
    <string name="str_sort">분류</string>
    <string name="str_start_date">시작일</string>
    <string name="str_end_date">종료일</string>
    <string name="str_defail_info">상세정보</string>
    <string name="str_hint_detail_info">소속에 대해 설명해주세요(선택사항)</string>
    <string name="str_accumulate_use">사용 누적</string>
    <string name="str_accumulate_get">획득 누적</string>
    <string name="str_lifestyle">일상과 경험</string>
    <string name="str_get_list">획득 내역</string>
    <string name="str_use_list">사용 내역</string>
    <string name="str_idea_gallery">영감 갤러리</string>
    <string name="str_idea">영감</string>
    <string name="str_life">일상</string>
    <string name="str_accumulate">누적</string>
    <string name="str_synthesis">종합</string>
    <string name="str_synthesis_rank">종합 랭킹</string>
    <string name="str_my_notification">내 소식</string>
    <string name="str_abiity_long">내 꿈에 맞게 갖출 능력</string>
</resources>