<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical">


    <!--툴바-->
    <include
            layout="@layout/action_bar_profile_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <!--툴바-->

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingRight="30dp">

            <!--이름-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:text="@string/str_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/bg_round_rectangle_gray"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:hint="@string/str_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/text_gray"
                    android:textSize="16sp" />
            <!--이름-->

            <!--성별-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:text="@string/str_gender"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btn_gender_man"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rectangle_selector_gray"
                        android:text="@string/str_male"
                        android:textColor="@color/color_register_gender"
                        android:textSize="18sp" />

                <Button
                        android:id="@+id/btn_gender_woman"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rectangle_selector_gray"
                        android:text="@string/str_female"
                        android:textColor="@color/color_register_gender"
                        android:textSize="18sp" />

            </LinearLayout>
            <!--성별-->

            <!--생일-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:text="@string/str_birthday"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="110dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/bg_round_rectangle_gray"
                        android:fontFamily="@font/nanum_square_round_b"
                        android:gravity="center"
                        android:hint="@string/str_year"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_gray"
                        android:textSize="16sp" />

                <TextView
                        android:id="@+id/tv_month"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/bg_round_rectangle_gray"
                        android:fontFamily="@font/nanum_square_round_b"
                        android:gravity="center"
                        android:hint="@string/str_month"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_gray"
                        android:textSize="16sp" />


                <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_round_rectangle_gray"
                        android:fontFamily="@font/nanum_square_round_b"
                        android:gravity="center"
                        android:hint="@string/str_date"
                        android:textColor="@color/black"
                        android:textColorHint="@color/text_gray"
                        android:textSize="16sp" />

            </LinearLayout>
            <!--생일-->

            <!--아이디-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:text="@string/str_id"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/bg_round_rectangle_gray"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:hint="@string/str_id_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/text_gray"
                    android:textSize="16sp" />
            <!--아이디-->

            <!--비밀번호-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:text="@string/str_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/bg_round_rectangle_gray"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:hint="@string/str_password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/text_gray"
                    android:textSize="16sp" />

            <EditText
                    android:id="@+id/et_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_round_rectangle_gray"
                    android:fontFamily="@font/nanum_square_round_b"
                    android:hint="@string/str_check_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="@color/text_gray"
                    android:textSize="16sp" />
            <!--비밀번호-->

        </LinearLayout>

    </ScrollView>

    <!--회원가입 버튼-->
    <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn_blue"
            android:fontFamily="@font/nanum_square_round_b"
            android:text="@string/str_agree_privacy_policy_register"
            android:textColor="@color/white"
            android:textSize="17sp" />
    <!--회원가입 버튼-->

</LinearLayout>