<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!-- Action Bar -->
    <include
            layout="@layout/action_bar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <!-- Action Bar -->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="19dp"
            android:paddingRight="19dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="17.3dp"
                android:fontFamily="@font/nanum_square_round_r"
                android:text="@string/str_change_password_info"
                android:textColor="@color/black"
                android:textSize="13.3sp" />

        <!-- 변경할 비밀번호 입력 -->
        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="34.7dp"
                android:layout_marginTop="13.7dp"
                android:background="@drawable/bg_round_rectangle_gray"
                android:fontFamily="@font/nanum_square_round_r"
                android:hint="@string/str_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/silver"
                android:textSize="13.3dp" />
        <!-- 변경할 비밀번호 입력 -->

        <!-- 변경할 비밀번호 한번더 입력 -->
        <EditText
                android:id="@+id/et_check_password"
                android:layout_width="match_parent"
                android:layout_height="34.7dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_round_rectangle_gray"
                android:fontFamily="@font/nanum_square_round_r"
                android:hint="@string/str_check_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="18dp"
                android:textColor="@color/black"
                android:textColorHint="@color/silver"
                android:textSize="13.3dp" />
        <!-- 변경할 비밀번호 한번더 입력 -->

        <!-- 비밀번호 양식 -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nanum_square_round_r"
                android:text="@string/str_password_warning"
                android:textColor="@color/tomato"
                android:textSize="12.3sp" />
        <!-- 비밀번호 양식 -->


        <!-- 버튼 -->
        <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="34.7dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_round_rectangle_blue"
                android:fontFamily="@font/nanum_square_round_b"
                android:text="@string/str_change_password"
                android:textColor="@color/white"
                android:textSize="14.7dp" />
        <!-- 버튼 -->

    </LinearLayout>


</LinearLayout>